k8s-yml/checkout.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: checkout-service
  name: checkout-service
  namespace: k1s
spec:
  ports:
  - port: 8083
    protocol: TCP
    targetPort: 8083
  selector:
    app: checkout-service
  type: LoadBalancer
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: checkout-service
  name: checkout-service
  namespace: k1s
spec:
  replicas: 3
  selector:
    matchLabels:
      app: checkout-service
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: checkout-service
    spec:
      containers:
      - image: josh951753/checkout:1.0
        imagePullPolicy: Always
        name: checkout-service
        ports:
          - containerPort: 8083
status: {}
