k8s-yml/mysql.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: mysqldb
  name: mysqldb
  namespace: k1s
spec:
  ports:
  - port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: mysqldb
  type: ClusterIP
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: mysqldb
  name: mysqldb
  namespace: k1s
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysqldb
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: mysqldb
    spec:
      containers:
      - image: mysql:8.0
        imagePullPolicy: IfNotPresent
        name: mysql
        resources: {}
        livenessProbe:
          exec:
            command: ["mysqladmin", "ping"]
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
        readinessProbe:
          exec:
            command: ["mysql", "-h", "127.0.0.1", "-uroot","-ppasswd","-e", "SELECT 1"]
          initialDelaySeconds: 5
          periodSeconds: 2
          timeoutSeconds: 1
status: {}
