k8s-yml/order.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: order-service
  name: order-service
  namespace: k1s
spec:
  ports:
  - port: 8083
    protocol: TCP
    targetPort: 8083
  selector:
    app: order-service
  type: LoadBalancer
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: order-service
  name: order-service
  namespace: k1s
spec:
  replicas: 5
  selector:
    matchLabels:
      app: order-service
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: order-service
    spec:
      containers:
      - image: k1s/order-service:1.0
        imagePullPolicy: IfNotPresent
        name: order-service
        ports:
          - containerPort: 8083
status: {}
