k8s-yml/rabbitmq.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: rabbitmq
  name: rabbitmq
  namespace: k1s
spec:
  ports:
  - port: 5672
    protocol: TCP
    targetPort: 5672
  - port: 15672
    protocol: TCP
    targetPort: 15672
  selector:
    app: rabbitmq
  type: ClusterIP
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: rabbitmq
  name: rabbitmq
  namespace: k1s
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: rabbitmq
    spec:
      containers:
      - image: k1s/rabbitmq:management
        imagePullPolicy: IfNotPresent
        name: rabbitmq
        resources: {}
status: {}
