k8s-yml/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  generation: 1
  name: ingress
  namespace: k1s
spec:
  ingressClassName: nginx
  rules:
  - host: demo.localdev.me
    http:
      paths:
      - backend:
          service:
            name: product-service
            port:
              number: 8082
        path: /product
        pathType: Prefix
      - backend:
          service:
            name: product-service
            port:
              number: 8082
        path: /tag
        pathType: Prefix
      - backend:
          service:
            name: broker
            port:
              number: 8083
        path: /order/[A-Za-z0-9]*/checkout
      - backend:
          service:
            name: order-service
            port:
              number: 8083
        path: /order
        pathType: Prefix
status:
  loadBalancer: {}
